[MO] Add fixed nav logo aspect ratio

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<a href="/"><img src="{{ base_url }}/assets/img/Lux-Logo-small.png" height="10%" width="auto" style="min-width: 89.5px; min-height: 50px; max-width: 358px; max-height: 200px;" /></a>
+<a href="/"><img src="{{ base_url }}/assets/img/Lux-Logo-small.png" alt="Lux Health Logo" style="width: 10%; min-width: 232px; min-height: 50px; max-width: 464px; max-height: 100px;" /></a>
 
 <nav>
   <a href="{{ base_url }}/about">About</a>
