--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,27 +1,23 @@
 <!-- Required meta tags -->
 <meta charset="utf-8">
 
+
 {% if page.canonical_link %}
+<script async src="https://cdn.ampproject.org/v0.js"></script>
 <link rel="canonical" href="{{ site.url }}">
+<style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
 {% elsif page.amp_link %}
 <link rel="amphtml" href="{{ site.url }}/amp{{ page.amp_link }}">
+{% endif %}
+
+{% if page.jsonld %}
+	{% include {{page.jsonld}}.html %}
 {% endif %}
 
 <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 <meta name="description" content="{{ page.description }}">
 <meta name="author" content="{{ site.author }}">
 <meta name="generator" content="Jekyll v4.0.0">
-<script type="application/ld+json">
-	{
-	  "@context": "http://schema.org",
-	  "@type": "Organization",
-	  "headline": "Lux Health delivers health care when and where you want it.",
-	  "datePublished": "2015-10-07T12:02:41Z",
-	  "legalName": "Lux Health",
-	  "location": "USA",
-	  "logo": 
-	}
-</script>
 
 <script src="{{ base_url }}/assets/js/lux.js" type="text/javascript"></script>
 <link href="https://fonts.googleapis.com/css?family=Lato:300&display=swap" rel="stylesheet"> 
