--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html {% if page.canonical_link %}amp{% endif %} lang="en">
   <head>
     {% include head.html %}
   </head>
