--- a/_includes/amp_nav.html
+++ b/_includes/amp_nav.html
@@ -1,4 +1,4 @@
-<a href="/"><amp-img src="{{ base_url }}/assets/img/Lux-Logo-small.png" alt="Lux Health Logo" height="50px" width="232px" /></a>
+<a href="{{ base_url }}/amp/"><amp-img src="{{ base_url }}/assets/img/Lux-Logo-small.png" alt="Lux Health Logo" height="50px" width="232px" /></a>
 
 <nav>
   <a href="{{ base_url }}/amp/about">About</a>
