--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -50,3 +50,13 @@ footer {
     margin: 0 0 20px 0;
     text-align: center;
 }
+
+footer .footer-links, footer .footer-links a {
+    color: #aaa;
+    font-size: 18px;
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
