--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,7 +21,7 @@
 
 <script src="{{ base_url }}/assets/js/lux.js" type="text/javascript"></script>
 <link href="https://fonts.googleapis.com/css?family=Lato:300&display=swap" rel="stylesheet"> 
-<link rel="stylesheet" href="{{ "/assets/styles/main.css" | relative_url }}">
+<link rel="stylesheet" href="{{ base_url }}/assets/styles/main.css">
 <link rel="icon" type="image/svg+xml" href="{{ base_url }}/assets/img/Lux-Logo-w-background.svg" sizes="any" />
 
 {% if page.title %}
