[MO] Deactivate amp-nav header until all amp pages are ready

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,7 +6,7 @@
   <body>
     <header>
       {% if page.canonical_link %}
-        {% include amp_nav.html %}
+        {% include nav.html %}
       {% else %}
         {% include nav.html %}
       {% endif %}
