--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -61,16 +61,8 @@ footer a:hover {
     text-decoration: underline;
 }
 
-
-.fixed-container {
-    /* background: red;
-    position: relative;
-    width: 100%;
-    height: 80vh;
-    max-height: 1080px; */
-}
-
 amp-video.contain {
+    background: #fff;
     height: 0;
     max-height: 1080px;
     max-width: 1920px;
@@ -85,6 +77,5 @@ amp-video.contain video {
     top: 0;
     left: 0;
     width: 100%;
-    max-width: 1920px;
     height: 100%;
 }
