--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,5 +2,9 @@
 
 <nav>
   <a href="{{ base_url }}/about">About</a>
+  <a href="{{ base_url }}/patient">For Patients</a>
+  <a href="{{ base_url }}/provider">For Providers</a>
+  <a href="{{ base_url }}/employer">For Employers</a>
   <a href="{{ base_url }}/contact">Contact Us</a>
+  <div><a href="tel:16503002348">Call Us at 650-300-2348</a></div>
 </nav>
