--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,5 +6,7 @@
   <a href="{{ base_url }}/provider">For Providers</a>
   <a href="{{ base_url }}/employer">For Employers</a>
   <a href="{{ base_url }}/contact">Contact Us</a>
-  <div><a href="tel:16503002348">Call Us at 650-300-2348</a></div>
+  <div>
+    <a href="{{ base_url }}/contact">Download the Patient App</a>
+  </div>
 </nav>
