--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Lato'; font-weight: 200;
+    font-family: 'Lato', sans-serif; font-weight: 200;
     margin: 0;
 }
 
@@ -44,6 +44,54 @@ nav a:hover:before {
     visibility: visible;
     -webkit-transform: scaleX(1);
     transform: scaleX(1);
+}
+
+p > strong {
+    font-weight: bold;
+}
+
+.overlap-top-container {
+    background-color: #fff;
+    border-radius: 20px 5px;
+    box-shadow: 0 0px 25px 0 rgba(50, 50, 50, 0.3);
+    box-sizing: border-box;
+    display: table-cell;
+    min-height: 170px;
+    min-width: 300px;
+    width: 40%;
+    max-width: 1200px;
+    margin: -35px 0 -130px 2%;
+    padding: 30px;
+    position: absolute;
+    text-align: left;
+    vertical-align: middle;
+    z-index: 1000;
+}
+
+.overlap-top-container h3 {
+    display: inline-block;
+    font-size: 30px;
+    font-weight: 800;
+    margin: 0 20px 0 0;
+    transition: font-size 1;
+    vertical-align: middle;
+}
+
+.video-container {
+    display: block;
+    width: 100%;
+    height: 80vh;
+    max-width: 1600px;
+    margin: 55px auto;
+    text-align: center;
+    overflow: hidden;
+}
+
+.master-container-1600 {
+    width: 80%;
+    max-width: 1600px;
+    margin: 0 auto;
+    box-sizing: border-box;
 }
 
 footer {
