--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,7 +6,7 @@
   <a href="{{ base_url }}/employer">For Employers</a>
   <a href="{{ base_url }}/about">About</a>
   <a href="{{ base_url }}/contact">Contact Us</a>
-  <div>
+  <!-- <div>
     <a href="{{ base_url }}/contact">Download the Patient App</a>
-  </div>
+  </div> -->
 </nav>
