Edit about page

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -15,9 +15,9 @@
       <p>We look forward to serving you again following this challenge.</p>
 
       <p style="font-style: italic;">The Lux Health Team</p>
-      <div>
+      <div style="margin-top: 45px; line-height: 1;">
         <p>If you are having a medical emergency, call 911.</p>
-        <p>If you would like to stay updated with Lux Health, we welcome your email address.</p>
+        <p>If you would like to stay updated with Lux Health, we welcome your email address below.</p>
         <p>If you would like reliable information on COVID-19, please refer to the <a href="https://www.cdc.gov/coronavirus/2019-nCoV/index.html" alt="CDC COVID-19 Webpage">CDC Website</a>.</p>
       </div>
       <div style="overflow: hidden;">
