Change covid notice slightly

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -10,7 +10,7 @@
       <p>We appreciate your active effort to prevent disease and keep you and your family healthy with Lux Health.  We absolutely understand your desire for at-home care.</p>
       <p>However, we are health care providers.  We believe we have a greater duty to temporarily focus our service in these trying times.  In light of Novel Coronavirus (COVID-19),
       <strong>we have decided to pause our medical services through Lux Health to volunteer our expertise and time combating the spread of COVID-19 more directly</strong>.</p>
-      <p>This unfortunately means we will not be available to answer our phones.  <strong>All current appointments will be canceled, and all patients notified.</strong></p>
+      <p>This unfortunately means we will not be available to answer our phones.  <strong>All current appointments are canceled.  Please check you emails for the notification.</strong></p>
       <p>Do not catastrophize.  This is an opportunity for us as a community to rise up to the challenge and act with our resilience and compassion.</p>
       <p>We look forward to serving you again following this challenge.</p>
 
