Fix base url for logo image

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <aside class="fixed-top-notice">
-      <img src="{{ relative_url }}assets/img/Lux-Logo-small.png" alt="Lux Health Logo" width="200px" style="display: block; margin: 0 auto;" />
+      <img src="{{ base_url }}assets/img/Lux-Logo-small.png" alt="Lux Health Logo" width="200px" height="auto" style="display: block; margin: 0 auto;" />
       <h3 style="text-align: center;">Thank you for all of your support and excitement</h3>
       <p>We appreciate your active effort to prevent disease and keep you and your family healthy with Lux Health.  We absolutely understand your desire for at-home care.</p>
       <p>However, we are health care providers.  We believe we have a greater duty to temporarily focus our service in these trying times.  In light of Novel Coronavirus (COVID-19),
