--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -98,6 +98,22 @@ p > strong {
     overflow: hidden;
 }
 
+.video-container-center-mobile {
+    display: block;
+    width: 100%;
+    height: 80vh;
+    max-width: 1600px;
+    margin: 55px auto;
+    text-align: center;
+    overflow: hidden;
+}
+
+@media only screen and (max-width: 420px) {
+    .video-container-center-mobile video {
+        transform: translateX(-15%);
+    }
+}
+
 .master-container-1600 {
     width: 80%;
     max-width: 1600px;
