--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,7 +25,7 @@
 <link rel="icon" type="image/svg+xml" href="{{ base_url }}/assets/img/Lux-Logo-w-background.svg" sizes="any" />
 
 {% if page.title %}
-	<title>{{ page.title }} - {{ site.title }}</title>
+	<title>{{ site.title }} | {{ page.title }}</title>
 {% else %}
 	<title>{{ site.title }}</title>
 {% endif %}
