--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,6 +1,12 @@
 body {
+    color: #000;
     font-family: 'Lato', sans-serif; font-weight: 200;
     margin: 0;
+}
+
+body.dark {
+    background: #1d1d1f;
+    color: #fff;
 }
 
 header {
