--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,7 +6,7 @@
       :root {
           --lux-font-family: sohne-var, "Helvetica Neue", Arial, sans-serif;
           --fluid-font-mobile: 25px; /* mobile */
-          --fluid-font-desktop: 45px; /* desktop */
+          --fluid-font-desktop: 40px; /* desktop */
 
       }
 
@@ -104,6 +104,22 @@
           top: 0;
           margin: 70px 0 10px 0;
           z-index: 1000;
+      }
+
+      .sticky-container {
+          width: 100%;
+          margin-top: 20px;
+          position: sticky;
+          text-align: center;
+          top: 60px;
+          z-index: 110;
+      }
+
+      .full-width-container {
+          width: 100%;
+          max-width: 1200px;
+          margin: 60px auto 0 auto;
+          text-align: center;
       }
 
       .main-header-logo {
