Add additional animations

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -111,8 +111,8 @@
           margin-top: 20px;
           position: sticky;
           text-align: center;
-          top: 60px;
-          z-index: 110;
+          top: 40px;
+          z-index: 1000;
       }
 
       .full-width-container {
@@ -125,10 +125,11 @@
       .main-header-logo {
           height: auto;
           width: 250px;
-          margin-top: 10px;
           opacity: 0.85;
           position: relative;
           top: 0px;
+          transform: translateY(10);
+          transition: all 200ms;
       }
 
       nav a {
