Add new mockup page to share with the world

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <div style="margin-top: 15px;"><img src="{{ base_url }}/assets/img/us-flag.png" width="25px" /> Made Securely in the U.S.</div>
 <div class="footer-links"><a href="{{ base_url }}//terms">Terms of Use</a> &bullet; <a href="{{ base_url }}//privacy-policy">Privacy Policy</a></div>
 <img src="{{ base_url }}/assets/img/Lux-Logo-small.png" height="20px" style="margin-top: 20px;" />
-<div>&copy; 2020 Lux Health Corp.</div>
-<div style="color: #5a5a5a; margin-top: 20px;"><span style="font-weight: 500;">Lux Health</span> is a trademark of Lux Health Corp.  All rights reserved.</div>
+<div>&copy; 2020-{{ 'now' | date: "%Y" }} Lux Health Corp.</div>
+<div style="color: #5a5a5a; margin-top: 20px;"><span style="font-weight: 500;">Lux Health</span> is a registered trademark of Lux Health Corp.  All rights reserved.</div>
