--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -22,28 +22,39 @@ header {
 }
 
 .hero-banner {
-  background: url("/assets/img/man-waving-on-video-call.jpg") no-repeat center -80px;
-  background-size: 100%;
+  background: url("/assets/img/man-waving-on-video-call.jpg") no-repeat -64px -80px;
+  background-size: auto 100%;
   min-height: 300px;
-  height: 730px;
+  height: 566px;
   margin-bottom: 184px;
 }
 
 .hero-banner h1 {
+  background-color: #fff;
   color: #03ABFF;
-  font-size: 48px;
+  font-size: 40px;
   font-weight: 600;
   margin: 0 40px;
+  padding: 8px;
 }
 
-.hero-banner p {
+.hero-content {
+  margin-top: 272px;
+}
+
+.hero-content .rounded-blue-button {
+  margin: 24px 40px;
+}
+
+.hero-content p {
   background: #fff;
+  box-sizing: border-box;
   color: #797979;
   box-sizing: border-box;
   font-size: 20px;
   line-height: 2;
-  padding: 40px 200px 40px 40px;
-  width: 660px;
+  margin: 0 40px;
+  min-width: 300px;
 }
 
 .rounded-blue-button {
@@ -57,13 +68,27 @@ header {
 }
 
 .left-anchored-section {
-  background-size: 100%;
   min-height: 300px;
   height: 730px;
-  margin-bottom: 184px;
+  margin: 400px auto;
+  display: inline-block;
 }
 
-.left-anchored-section h3, .centered-section h3 {
+.left-anchored-section .section-content {
+  display: inline-block;
+  flex: 1;
+  margin: 40px;
+  max-width: 480px;
+  vertical-align: top;
+}
+
+.left-anchored-section .img-container {
+  flex: 1; width: 40%; min-width: 300px; max-width: 650px;
+  margin: 0 auto;
+}
+
+.left-anchored-section h3,
+.centered-section h3 {
   color: #03ABFF;
   font-size: 36px;
   font-weight: 500;
@@ -74,15 +99,14 @@ header {
   box-sizing: border-box;
   font-size: 20px;
   line-height: 2;
-  width: 660px;
+  width: 100%;
 }
 
 .centered-section {
   margin: 0 auto;
   text-align: center;
-  min-height: 300px;
-  height: 730px;
-  margin-bottom: 240px;
+  min-height: 730px;
+  margin-bottom: 40px;
 }
 
 ul.features-list {
@@ -104,26 +128,142 @@ ul.features-list hr {
   text-align: center;
   min-height: 300px;
   height: 560;
-  margin: 360px auto 120px auto;
+  margin: 0px auto 80px auto;
 }
 
 .three-section {
-  display: inline-block;
-  width: 30%;
-  margin: 0 1.5%;
+  display: block;
+  width: 100%;
+  margin: 0;
+  padding: 40px;
   line-height: 2;
   text-align: left;
-  vertical-align: top;
   color: #797979;
   font-size: 20px;
+  box-sizing: border-box;
 }
 
-.three-section h3, .footer-section h3 {
+.three-section h3,
+.footer-section h3 {
   color: #03ABFF;
   font-size: 36px;
   font-weight: 600;
   line-height: 1.2;
 }
+
+/* @media (min-width: 1240px) { */
+@media (min-width: 800px) {
+  .hero-banner {
+    background: url("/assets/img/man-waving-on-video-call.jpg") no-repeat center -80px;
+    background-size: 100%;
+    height: 730px;
+    margin-bottom: 184px;
+  }
+
+  .hero-banner h1 {
+    background-color: transparent;
+    color: #03ABFF;
+    font-size: 48px;
+    padding: 0;
+  }
+
+  .hero-content {
+    margin-top: 0;
+    float: right;
+  }
+
+  .rounded-blue-button {
+    font-size: 18px;
+    outline: 0;
+    padding: 12px 36px;
+  }
+  
+  .hero-content .rounded-blue-button {
+    margin: 24px 40px 28px 40px;
+  }
+  
+  .hero-content p {
+    font-size: 20px;
+    line-height: 2;
+    margin: 0;
+    padding: 40px 200px 40px 40px;
+    width: 660px;
+  }
+
+  .left-anchored-section {
+    display: flex;
+    flex-direction: row-reverse;
+    min-height: 300px;
+    height: 730px;
+    margin: 0 0 120px 0;
+    justify-content: flex-end;
+  }
+
+  .left-anchored-section .img-container {
+    flex: 1; width: 40%; min-width: 300px; max-width: 650px;
+    margin: 0;
+  }
+
+  .left-anchored-section .section-content {
+    margin: 40px 120px 40px 40px;
+    width: 660px;
+  }
+
+  .left-anchored-section h3,
+  .centered-section h3 {
+    font-size: 36px;
+    font-weight: 500;
+  }
+
+  .left-anchored-section p {
+    font-size: 20px;
+    line-height: 2;
+  }
+
+  .centered-section {
+    min-height: 300px;
+    height: 730px;
+    margin-bottom: 40px;
+  }
+
+  ul.features-list {
+    margin-left: 0;
+    padding: 0 16px;
+    font-size: 20px;
+  }
+
+  ul.features-list hr {
+    height: 1px;
+    margin: 18px 0;
+    opacity: 0.8;
+  }
+
+  .three-part-section {
+    min-height: 300px;
+    height: 560;
+    margin: 300px auto 120px auto;
+  }
+
+  .three-section {
+    display: inline-block;
+    width: 30%;
+    margin: 0 1.5%;
+    line-height: 2;
+    text-align: left;
+    font-size: 20px;
+    vertical-align: top;
+  }
+
+  .three-section h3,
+  .footer-section h3 {
+    font-size: 36px;
+    font-weight: 600;
+    line-height: 1.2;
+  }
+}
+
+
+
 
 .fixed-top-notice {
   background: #59A7FD;
