--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,7 +22,11 @@
 <script src="{{ base_url }}/assets/js/lux.js" type="text/javascript"></script>
 <link href="https://fonts.googleapis.com/css?family=Lato:300,400,900&display=swap" rel="stylesheet"> 
 <link rel="stylesheet" href="{{ base_url }}/assets/styles/main.css">
-<link rel="icon" type="image/svg+xml" href="{{ base_url }}/assets/img/Lux-Logo-w-background.svg" sizes="any" />
+
+<link rel="icon" href="/favicon.ico" sizes="any">
+<link rel="icon" href="/assets/img/icons/icon.svg" type="image/svg+xml">
+<link rel="apple-touch-icon" href="/assets/img/icons/apple-touch-icon.png">
+<link rel="manifest" href="/manifest.webmanifest">
 
 {% if page.title %}
 	<title>{{ site.title }} | {{ page.title }}</title>
