--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -123,6 +123,25 @@ a.logo-link img {
   text-align: center;
 }
 
+.centered-section-image {
+  display: inline-block;
+  width: 30%;
+  min-width: 300px;
+}
+
+.centered-section-content {
+  display: inline-block;
+  margin: 40px;
+  vertical-align: top;
+  text-align: left;
+}
+
+.centered-image {
+  margin-top: 40px;
+  width: 90%;
+  max-width: 1000px;
+}
+
 ul.features-list {
   color: #797979;
   margin-left: 0;
@@ -155,6 +174,19 @@ ul.features-list hr {
   color: #797979;
   font-size: 20px;
   box-sizing: border-box;
+}
+
+.footer-section {
+  background: #95dcff;
+  width: 100%;
+  height: 676px;
+  text-align: center;
+}
+
+.footer-content {
+  display: block;
+  padding-top: 230px;
+  position: relative;
 }
 
 .three-section h3,
@@ -441,7 +473,7 @@ p>strong {
 CSS Infinite Slideshow
 ***/
 .slideshow-container {
-  background: #59A7FD;
+  background-color: #0a2540;
   color: rgba(255,255,255,0.6);
   display: block;
   height: 275px;
@@ -453,6 +485,12 @@ CSS Infinite Slideshow
 
   position: relative;
   overflow: hidden;
+}
+
+.slideshow-container h3 {
+  font-size: 24;
+  font-weight: 100;
+  margin: 20px;
 }
 
 .slideshow {}
