[MO] Add responsive images

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
-<div style="margin: 16px 0 8px 0;"><img src="{{ base_url }}/assets/img/us-flag.png" width="25px" /> Made Securely in the U.S.</div>
+<div class="footer-us-flag"><img src="{{ base_url }}/assets/img/us-flag.png" width="25px" /> Made Securely in the U.S.</div>
 <div class="footer-links"><a href="{{ base_url }}//terms">Terms of Use</a> &bullet; <a href="{{ base_url }}//privacy-policy">Privacy Policy</a></div>
-<img src="{{ base_url }}/assets/img/Lux-Logo-small.png" height="40px" style="margin-top: 16px;" />
+<img src="{{ base_url }}/assets/img/Lux-Logo-small.png" height="40px" class="footer-logo" />
 <div>&copy; 2020-{{ 'now' | date: "%Y" }} Lux Health Corp.</div>
-<div style="color: #5a5a5a; margin: 8px 0 64px 0;"><span style="font-weight: 500;">Lux Health</span> is a registered trademark of Lux Health Corp.  All rights reserved.</div>
+<div class="footer-string"><span class="medium-font-weight">Lux Health</span> is a registered trademark of Lux Health Corp.  All rights reserved.</div>
