--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,13 +20,26 @@
 <meta name="generator" content="Jekyll v4.0.0">
 
 <script src="{{ base_url }}/assets/js/lux.js" type="text/javascript"></script>
-<link href="https://fonts.googleapis.com/css?family=Lato:300,400,900&display=swap" rel="stylesheet"> 
 <link rel="stylesheet" href="{{ base_url }}/assets/styles/main.css">
 
 <link rel="icon" href="/favicon.ico" sizes="any">
 <link rel="icon" href="/assets/img/icons/icon.svg" type="image/svg+xml">
 <link rel="apple-touch-icon" href="/assets/img/icons/apple-touch-icon.png">
 <link rel="manifest" href="/manifest.webmanifest">
+
+<!-- connect to domain of font files -->
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+<!-- optionally increase loading priority -->
+<link rel="preload" as="style" href="https://fonts.googleapis.com/css?family=Lato:300,400,900&display=swap">
+
+<!-- async CSS -->
+<link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');" href="https://fonts.googleapis.com/css?family=Lato:300,400,900&display=swap">
+
+<!-- no-JS fallback -->
+<noscript>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,900&display=swap">
+</noscript>
 
 {% if page.title %}
 	<title>{{ site.title }} | {{ page.title }}</title>
