Add amp for index

--- a/_includes/index/indexld.html
+++ b/_includes/index/indexld.html
@@ -1,11 +1,11 @@
-<script type="application/ld+json">
+<script type='application/ld+json'>
 	{
-	  "@context": "http://schema.org",
-	  "@type": "NewsArticle",
-	  "headline": "Open-source framework for publishing content",
-	  "datePublished": "2015-10-07T12:02:41Z",
-	  "image": [
-		"logo.jpg"
-	  ]
+	  "@context": "http://www.schema.org",
+	  "@type": "Corporation",
+	  "name": "Lux Health Corp.",
+	  "url": "https://www.luxhealth.com/",
+	  "logo": "https://www.luxhealth.com/assets/img/logos/Lux-Health-logo.webp",
+	  "description": "Lux Health brings the top, full-stack software solution to top-notch concierge medical clinics.",
+	  "hasMap": "https://www.google.com/maps/place/Silicon+Valley,+CA"
 	}
 </script>
